# bel_projects

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .texlipse  .travis.yml  0001-pfiler-add-rule-for-forwarding-FEC-packets-to-fabric.patch  0001-wrf-add-status-word-to-tx.patch  Jenkinsfile  Makefile  Manifest.py  README.md  autogen.sh  changes  dump.txt  eb-flash.c  export-lm32-bin.sh  fix-access-rights.sh  fix-git.sh  install-hdlmake.sh  program-scu.sh  serv_req_info.txt  start-socat.sh  sw_pz.c  tatus  testMemory.sh
.github/workflows/: ci-basic-build.yml  ci-firmware-build.yml  ci-timing-projects.yml  main.yml
cy7/: README
cy7/cyfx2usbuart/: convert_serial.c  fx2regs.h  softuart.c  softuart.h
cy7/softuart/: Virtual.Uv2  Virtual.c  softuart.c
doc/arrow_usb_programmer/: 51-arrow-programmer.rules  arrow_usb_blaster.conf  readme.md
doc/platform_cable/: 52-xilinx-ftdi-usb.rules  readme.md  (+1 more)
ip_cores/: Manifest.py
makefiles/: makefile.base  makefile.dox  makefile.lm32  makefile.native  makefile.rtos  makefile.scu  makefile.scun  makefile.uc  scu_dirs.inc
modules/: Manifest.py  led_blink.vhd  trans_pkg.vhd  trans_pll.ppf  trans_pll.qip
modules/wr-mil-gw/: .gitignore  Makefile  Makefile.am  configure.ac  readme.txt  stop_and_flash.sh  wr_mil_gw.h
modules/wr-mil-gw/control/: Makefile  wr-mil-gw-ctl.c  wr-mil-gw-ctl.cpp
modules/wr-mil-gw/firmware/: Makefile  stop_flash_configure.sh  wr_mil.c  wr_mil_config.c  wr_mil_config.h  wr_mil_delay.h  wr_mil_delay.s  wr_mil_eca_ctrl.c  wr_mil_eca_ctrl.h  wr_mil_eca_queue.c  wr_mil_eca_queue.h  wr_mil_events.h  wr_mil_msi.c  wr_mil_msi.h  wr_mil_oled.c  wr_mil_oled.h
modules/wr-mil-gw/saft-control/: Makefile  saft-wrmilgw-ctl.cpp  wr_mil_gw_regs.h
modules/wr-mil-gw/setup/nfsinit/global/: timing-rte-wrmilgw-ESR  timing-rte-wrmilgw-ESR-dev  timing-rte-wrmilgw-SIS  timing-rte-wrmilgw-SIS-dev
modules/wr-mil-gw/setup/timing-rte/: tree.txt
modules/wr-mil-gw/setup/timing-rte/wrmilgw-ESR-dev/: wrmilgw-ESR.sh
modules/wr-mil-gw/setup/timing-rte/wrmilgw-SIS-dev/: wrmilgw-SIS.sh
modules/wr-mil-gw/src/: WrMilGateway.cpp  WrMilGateway.hpp  create_services.cpp  saft-wrmilgw-ctl.cpp
modules/wr-mil-gw/unittest/: makefile
syn/: autogen.tcl  build.mk
tools/: .gitignore  Makefile  arc_bitstr.sh  button-game.cpp  crc32.c  crc32.h  crc8.c  crc8.h  dm-cmd-sh-prompt.sh  dm-sched-sh-prompt.sh  eb-asmi.c  eb-clock.c  eb-config-nv.c  eb-console.c  eb-daq-dump.c  eb-fg-statistic.c  eb-flash-secure  eb-flash.c  eb-fwload.c  eb-i2c-master.c  eb-iflash.c  eb-iflash.c.old  eb-info.c  eb-neorv32-ctl  eb-pps.c  eb-reset.c  eb-sflash.c  eb-ssh-func.sh  eb-time.c  eb-tools-sh-prompt.sh  eb_memtest.c  eca-15pps  eca-poll  eca-pps  eca-snoop.cpp  io-test.cpp  lm32-ctl  packet_capture.vhd  pexaria5-io-test.cpp  run-till-dead  (+5 more)
top/: BLM_FIFO.vhd
(+8083 files in other folders)
