AUTOMAKE_OPTIONS=foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -Wall -g  $(SAFTBUS_CFLAGS) $(SAFTLIB_CFLAGS) $(SIGCPP_CFLAGS) -I $(top_srcdir)/src -I $(top_builddir)/src -DDATADIR='"$(datadir)/WrMilGateway"'

firmwaredir = $(datadir)/WrMilGateway
firmware_DATA = $(top_srcdir)/firmware.bin
EXTRA_DIST = $(top_srcdir)/firmware.bin
EXTRA_DIST += $(top_srcdir)/wr_mil_gw.h

BUILT_SOURCES = \
	src/WrMilGateway_Service.cpp            \
	src/WrMilGateway_Service.hpp            \
	src/WrMilGateway_Proxy.cpp              \
	src/WrMilGateway_Proxy.hpp    

lib_LTLIBRARIES = \
	lib@PACKAGE@-service.la  \
	lib@PACKAGE@-proxy.la    
# @PACKAGE@ is substituded with the string given to AC_INIT([...])
# lib@PACKAGE@_service_la_LDFLAGS = -Wl,--export-dynamic 
lib@PACKAGE@_service_la_CPPADD = $(SIGCPP_CFLAGS)
lib@PACKAGE@_service_la_LIBADD = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS) $(SIGCPP_LIBS) -ldl
lib@PACKAGE@_service_la_SOURCES = \
	src/WrMilGateway.cpp                   \
	src/WrMilGateway_Service.cpp            \
	src/create_services.cpp

lib@PACKAGE@_service_includedir = $(includedir)/@PACKAGE@/service
lib@PACKAGE@_service_include_HEADERS = \
	src/WrMilGateway.hpp                        \
	src/WrMilGateway_Service.hpp                 

lib@PACKAGE@_proxy_la_LIBADD  = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS) $(SIGCPP_LIBS)
lib@PACKAGE@_proxy_la_SOURCES =   \
	src/WrMilGateway_Proxy.cpp                   

lib@PACKAGE@_proxy_includedir = $(includedir)/@PACKAGE@
lib@PACKAGE@_proxy_include_HEADERS = \
	src/WrMilGateway_Proxy.hpp                

bin_PROGRAMS = saft-wrmilgw-ctl
saft_wrmilgw_ctl_LDADD   = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS)  $(SIGCPP_LIBS) lib@PACKAGE@-proxy.la
saft_wrmilgw_ctl_SOURCES = src/saft-wrmilgw-ctl.cpp 

#firmware binary
$(top_srcdir)/firmware.bin:
	PATH="../../../lm32-toolchain/bin:${PATH}" $(MAKE) -C $(top_srcdir)/firmware && cp $(top_srcdir)/firmware/wr_mil.bin $(top_srcdir)/firmware.bin

# autogenerated files
%_Service.cpp %_Service.hpp %_Proxy.cpp %_Proxy.hpp: %.hpp
	saftbus-gen $< -o src

# cleaning of autogenerated files
CLEANFILES = $(top_builddir)/src/*_Proxy.*pp $(top_builddir)/src/*_Service.*pp 
